colb/teastore-clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-db
spec:
  selector:
    matchLabels:
      app: teastore-db
  template:
    metadata:
      labels:
        app: teastore-db
    spec:
      containers:
        - name: teastore-db
          image: descartesresearch/teastore-db
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-db
  labels:
    app: teastore-db
spec:
  ports:
    - port: 3306
      protocol: TCP
      name: http
  selector:
    app: teastore-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-registry
spec:
  selector:
    matchLabels:
      app: teastore-registry
  template:
    metadata:
      labels:
        app: teastore-registry
    spec:
      containers:
        - name: teastore-registry
          image: descartesresearch/teastore-registry
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-registry
  labels:
    app: teastore-registry
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: teastore-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-auth
spec:
  selector:
    matchLabels:
      app: teastore-auth
  template:
    metadata:
      labels:
        app: teastore-auth
    spec:
      containers:
        - name: teastore-auth
          image: descartesresearch/teastore-auth
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-auth
  labels:
    app: teastore-auth
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: teastore-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-image
spec:
  selector:
    matchLabels:
      app: teastore-image
  template:
    metadata:
      labels:
        app: teastore-image
    spec:
      containers:
        - name: teastore-image
          image: descartesresearch/teastore-image
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-image
  labels:
    app: teastore-image
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: teastore-image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-recommender
spec:
  selector:
    matchLabels:
      app: teastore-recommender
  template:
    metadata:
      labels:
        app: teastore-recommender
    spec:
      containers:
        - name: teastore-recommender
          image: descartesresearch/teastore-recommender
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-recommender
  labels:
    app: teastore-recommender
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: teastore-recommender
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-webui
spec:
  selector:
    matchLabels:
      app: teastore-webui
  template:
    metadata:
      labels:
        app: teastore-webui
    spec:
      containers:
        - name: teastore-webui
          image: descartesresearch/teastore-webui
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-webui
  labels:
    app: teastore-webui
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: teastore-webui
