colb/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teastore-webui
spec:
  hosts:
    - "*"
  gateways:
    - default/bookinfo-gateway
  http:
    - match:
        - uri:
            prefix: /tools.descartes.teastore.webui
      route:
        - destination:
            host: teastore-webui.teastore.svc.cluster.local
            port:
              number: 8080
